# AleTrail

./: .gitignore  pyproject.toml
app/: app.py
app/middleware/: auth.py
app/modules/: db.py
app/modules/auth/: routes.py  schema.py
app/modules/organisation/: routes.py  schema.py
migrations/versions/: 043acab2c1fb_create_users_table.py  6a87769f8346_create_organisations_table.py
tests/: conftest.py
tests/auth/: test_signin.py  test_signup.py
