[project]
name = 'AleTrail'
version = '0.1.0'
description = 'API for craft pubs'
readme = 'README.md'
requires-python = '>=3.12'

dependencies = [
    "aiohttp>=3.12.14",
    "alembic>=1.17.1",
    'fastapi==0.115.13',
    "psycopg>=3.2.12",
    "psycopg-pool>=3.2.7",
    "pyaml-env>=1.2.2",
    "pydantic[email]>=2.11.7",
    'uvicorn==0.34.3',
]
